--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </form>
         
     </div>
-    <div class="col">
+    <div class="col  col-lg-6 col-md-6 col-sm-6 col-12">
         <img src="img/istockphoto-1283415226-1024x1024.jpg" alt="login photo" class="img-fluid ">
     </div>
 </div>
